dashboard page and routes plus server bearer authentication

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=4000
 CONN_STR=mongodb://localhost:27017,localhost:27018,localhost:27019/techie?replicaSet=rs
 NODE_ENV=development
+SECRETKEY=HY$i9@"yp[/ywn(=T:kCbO$r>V]OaP
