--- a/client/package.json
+++ b/client/package.json
@@ -25,16 +25,20 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^10.9.0",
     "framer-motion": "^11.0.20",
+    "html-react-parser": "^5.1.9",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
     "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.2.1",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
+    "react-quill": "^2.0.0",
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
     "sonner": "^1.4.3",
