post data submit to mongodb server and ui changes

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=4000
-CONN_STR=mongodb://localhost:27017,localhost:27018,localhost:27019/techie?replicaSet=rs
+CONN_STR=mongodb+srv://xyvielyons:vtUWJ6sOQRBmYR6B@cluster0.xg5z9p5.mongodb.net/techie
 NODE_ENV=development
 SECRETKEY=HY$i9@"yp[/ywn(=T:kCbO$r>V]OaP
