--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "firebase": "^10.9.0",
     "framer-motion": "^11.0.20",
     "html-react-parser": "^5.1.9",
+    "html-to-text": "^9.0.5",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
     "next-auth": "^5.0.0-beta.15",
@@ -35,8 +36,10 @@
     "quill-image-uploader": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-ellipsis-text": "^1.2.1",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "react-lines-ellipsis": "^0.15.4",
     "react-lottie": "^1.2.4",
     "react-quill": "^2.0.0",
     "react-spinners": "^0.13.8",
@@ -50,9 +53,11 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lines-ellipsis": "^0.15.6",
     "@types/react-lottie": "^1.2.10",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
