--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
     "firebase": "^10.9.0",
     "framer-motion": "^11.0.20",
     "html-react-parser": "^5.1.9",
