--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "firebase": "^10.9.0",
     "framer-motion": "^11.0.20",
@@ -46,6 +47,7 @@
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
     "sonner": "^1.4.3",
+    "swiper": "^11.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
