--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@reduxjs/toolkit": "^2.2.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -44,6 +45,7 @@
     "react-lines-ellipsis": "^0.15.4",
     "react-lottie": "^1.2.4",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.1.0",
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
     "sonner": "^1.4.3",
